@@ -6,6 +6,7 @@ woas.i18n = {
 	ASK_MENU_LINK: "Do you want to add a link into the main menu?",
 	B64_REQ: " (requires %s due to base64 encoding)",
 	CANCEL_EDITING:"Changes to this page will not be saved.",
+	CONFIRM_OVERWRITE: "Page \"%s\" already exists. Overwrite it?",
 	CONFIRM_DELETE:"Are you sure you want to DELETE page '%s'?",
 	CONFIRM_DELETE_ALL1: "Are you going to ERASE all your pages?",
 	CONFIRM_DELETE_ALL2: "This is the last confirm needed in order to ERASE all your pages.\n\nALL YOUR PAGES WILL BE LOST\n\nAre you sure you want to continue?",
